# umans-gate

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml  config.yaml  install.ps1  install.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  release.yml
assets/: app.css
crates/umans-gate/: Cargo.toml
crates/umans-gate-cli/: Cargo.toml
crates/umans-gate-cli/src/: cli.rs  logging.rs  main.rs
crates/umans-gate-cli/src/commands/: completions.rs  mod.rs  serve.rs  uninstall.rs  update.rs
crates/umans-gate/src/: concurrency.rs  config.rs  config_store.rs  error.rs  lib.rs  model_fetch.rs  shutdown.rs  types.rs
crates/umans-gate/src/dashboard/: assets.rs  history.rs  mod.rs  providers.rs  providers_test.rs  requests.rs  router.rs  state.rs  templates.rs  tracked_permit.rs  tracker.rs
crates/umans-gate/src/proxy/: errors.rs  gating.rs  handler.rs  mod.rs  router.rs  timeouts.rs  upstream.rs
crates/umans-gate/tests/: config_examples.rs  dashboard_tracking.rs  e2e_real_endpoint.rs  integration_disconnect_during_sse.rs  integration_passthrough.rs  token_metrics_integration.rs
docs/: architecture.md
docs/decisions/: 0001-why-rust.md  0002-why-axum.md  0003-why-htmx-not-spa.md  0004-why-yaml-config.md  0005-why-weighted-concurrency.md  0006-why-auto-config-from-remote.md  0007-why-cargo-dist-for-releases.md  0008-why-dashboard-binds-localhost.md  README.md
examples/: config-advanced.yaml  config-openai-only.yaml  config.yaml
scripts/: build-css.ps1  build-css.sh
templates/: dashboard.html  history_fragment.html  provider_fragment.html  providers_fragment.html  request_fragment.html
