[package]
name = "umans-gate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[features]
default = []
hot-reload = ["dep:notify", "dep:arc-swap", "dep:notify-debouncer-mini"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
dashmap = { workspace = true }
figment = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
askama = { workspace = true }
rust-embed = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
mime_guess = { workspace = true }
url = { workspace = true }
notify = { workspace = true, optional = true }
notify-debouncer-mini = { workspace = true, optional = true }
arc-swap = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
